    when compiling/loading a file and when using the set_logtalk_flag/2
    built-in predicate: in both cases, setting the "smart_compilation" flag
    on will turn off the "clean" flag and setting the "clean" flag on will
    turn off the "smart_compilation" flag. Also, setting the "debug" flag
    on will turn off both the "smart_compilation" and "clean" flags.

    Corrected a Logtalk compiler bug when the "source_data" flag is on with
    back-end Prolog compilers where is not possible to retrieve the position
    of a read term.

    Corrected a bug in the compilation of the meta_non_terminal/1 directive
    where only the first meta-argument would be correctly processed.

    Updated the ECLiPSe config file to detect when running on Windows 64
    bits systems and to ignore non-predicate and non-operator exports when
    pre-processing lib/1 directives.

    Updated the unit test framework to print more informative messages for
    failed unit tests.

    Added predicate split/4 (for splitting a list into sublists with a given
    length) to the "listp", "list", and "difflist" library entities.

    Updated the "cc" example with a definition for the shell/2 predicate for
    CxProlog.

    Changed the names of the objects in the "mi" example to avoid a name
    conflict when running the example unit tests.

    Corrected a bug in the Windows installer that prevented detection of
    YAP 64 bits versions. Thanks to Stepan Ipatov for the bug report.

    Corrected a bug in the Windows installer that prevented users from
    customizing the installation directory. Thanks to Daniel Moniz for
    the bug report and Gavin Lambert for diagnosing the bug.

    Updated the Windows installer script for improved detection of XSB and to
    default to install only the per-user files when run by a non-admin user on
    a computer where Logtalk is already installed.

    Added basic support for the LaTeX "listings "package. Added notes on the